# CloudSH

./: .gitignore  README.md  install.sh  package-lock.json  package.json  server.js
Client/: Cargo.toml
Client/Src/: main.rs
Server/: Cargo.toml
Server/Src/: main.rs
public/: index.html  install.sh
public/Agent/: Cargo.toml
public/Agent/Src/: main.rs
