[package]
name = "cloudsh-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cloudsh"
path = "Src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
