[package]
name = "cloudsh-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cloudsh"
path = "Src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
